# gtest-examples

./: CMakeLists.txt
Command/: CMakeLists.txt  Command.cpp  Command.h
SmartHome/: CMakeLists.txt  SmartHome.cpp  SmartHome.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  CommandTest.cpp  LightControlMock.h  MockLightControl.h  SmartHome.h  SmartHomeTest.cpp
